--- a/react-dom-diff/public/index.html
+++ b/react-dom-diff/public/index.html
@@ -7,5 +7,11 @@
   </head>
   <body>
     <div id="root"></div>
+    <div>
+      <button id="single1">1.key相同，类型相同，数量相同</button><br />
+      <div key="title" id="title">div</div>
+      <button id="single1Update">2.复用老节点，只更新属性</button><br />
+      <div key="title" id="title2">div2</div>
+    </div>
   </body>
 </html>
