--- a/react-dom-diff/public/index.html
+++ b/react-dom-diff/public/index.html
@@ -7,11 +7,43 @@
   </head>
   <body>
     <div id="root"></div>
+    <br />
     <div>
       <button id="single1">1.key相同，类型相同，数量相同</button><br />
-      <div key="title" id="title">div</div>
-      <button id="single1Update">2.复用老节点，只更新属性</button><br />
-      <div key="title" id="title2">div2</div>
+      &lt;div key=&quot;title&quot; id=&quot;title&quot;&gt;div&lt;/div&gt;<br />
+      <button id="single1Update">复用老节点，只更新属性</button><br />
+      &lt;div key=&quot;title&quot; id=&quot;title2&quot;&gt;div2&lt;/div&gt;
+    </div>
+    <br />
+    <div>
+      <button id="single2">2.key相同，类型不同</button><br />
+      &lt;div key=&quot;title&quot; id=&quot;title&quot;&gt;div&lt;/div&gt;<br />
+      <button id="single2Update">删除老节点，添加新节点</button><br />
+      &lt;p key=&quot;title&quot; id=&quot;title&quot;&gt;p&lt;/p&gt;
+    </div>
+    <br />
+    <div>
+      <button id="single3">3.类型相同，key不同</button><br />
+      &lt;div key=&quot;title&quot; id=&quot;title&quot;&gt;div&lt;/div&gt;<br />
+      <button id="single3Update">删除老节点，添加新节点</button><br />
+      &lt;div key=&quot;title2&quot; id=&quot;title&quot;&gt;title&lt;/div&gt;
+    </div>
+    <br />
+    <div>
+      <button id="single4">4.原来多个节点，现在只有一个节点</button><br />
+      &lt;ul key=&quot;ul&quot;&gt;
+      &lt;li key=&quot;A&quot;&gt;A&lt;/li&gt;
+      &lt;li key=&quot;B&quot; id=&quot;B&quot;&gt;
+        B
+      &lt;/li&gt;
+      &lt;li key=&quot;C&quot;&gt;C&lt;/li&gt;
+      &lt;/ul&gt;<br />
+      <button id="single4Update">保留并更新这一个节点，删除其他节点</button><br />
+      &lt;ul key=&quot;ul&quot;&gt;
+      &lt;li key=&quot;B&quot; id=&quot;B2&quot;&gt;
+        B2
+      &lt;/li&gt;
+      &lt;/ul&gt;
     </div>
   </body>
 </html>
