230330 - react-dom-diff - 8开始多节点DOMDIFF(完成)

--- a/react-dom-diff/public/index.html
+++ b/react-dom-diff/public/index.html
@@ -79,12 +79,32 @@
       <br />
       <button id="multi3Update">删除老元素并更新老元素</button>
       <br />
-      &lt;ul key=&quot;ul&quot;&gt;
-        &lt;li key=&quot;A&quot;&gt;A&lt;/li&gt;
-        &lt;li key=&quot;B&quot; id=&quot;B2&quot;&gt;
-          B2
-        &lt;/li&gt;
-      &lt;/ul&gt;
+      &lt;ul key=&quot;ul&quot;&gt; &lt;li key=&quot;A&quot;&gt;A&lt;/li&gt;
+      &lt;li key=&quot;B&quot; id=&quot;B2&quot;&gt; B2 &lt;/li&gt; &lt;/ul&gt;
+    </div>
+    <hr />
+    <div>
+      <button id="multi5">9.多个节点数量不同、key不同</button
+      ><br />
+      &lt;ul key=&quot;ul&quot;&gt;<br/>
+        &nbsp;&nbsp;&lt;li key=&quot;A&quot;&gt;A&lt;/li&gt;<br/>
+        &nbsp;&nbsp;&lt;li key=&quot;B&quot; id=&quot;B&quot;&gt;B&lt;/li&gt;<br/>
+        &nbsp;&nbsp;&lt;li key=&quot;C&quot;&gt;C&lt;/li&gt;<br/>
+        &nbsp;&nbsp;&lt;li key=&quot;D&quot;&gt;D&lt;/li&gt;<br/>
+        &nbsp;&nbsp;&lt;li key=&quot;E&quot;&gt;E&lt;/li&gt;<br/>
+        &nbsp;&nbsp;&lt;li key=&quot;F&quot;&gt;F&lt;/li&gt;<br/>
+      &lt;/ul&gt;<br/>
+      <br />
+      <button id="multi5Update">处理节点移动的情况</button>
+      <br />
+      &lt;ul key=&quot;ul&quot;&gt;<br/>
+        &nbsp;&nbsp;&lt;li key=&quot;A&quot;&gt;A&lt;/li&gt;<br/>
+        &nbsp;&nbsp;&lt;li key=&quot;C&quot;&gt;C&lt;/li&gt;<br/>
+        &nbsp;&nbsp;&lt;li key=&quot;E&quot;&gt;E&lt;/li&gt;<br/>
+        &nbsp;&nbsp;&lt;li key=&quot;B&quot; id=&quot;B2&quot;&gt;B2&lt;/li&gt;<br/>
+        &nbsp;&nbsp;&lt;li key=&quot;G&quot;&gt;G&lt;/li&gt;<br/>
+        &nbsp;&nbsp;&lt;li key=&quot;D&quot;&gt;D&lt;/li&gt;<br/>
+      &lt;/ul&gt;<br/>
     </div>
   </body>
 </html>
