--- a/zf-react18/1.React 前置知识/requestIdleCallback/结合.html
+++ b/zf-react18/1.React 前置知识/requestIdleCallback/结合.html
@@ -5,16 +5,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>结合</title>
+    <style>
+      .loading {
+        width: 150px;
+        height: 4px;
+        border-radius: 2px;
+        margin: 0 auto;
+        margin-top: 100px;
+        position: relative;
+        background: lightgreen;
+        -webkit-animation: changeBgColor 1.04s ease-in infinite alternate;
+      }
+      .loading span {
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        background: lightgreen;
+        position: absolute;
+        margin-top: -7px;
+        margin-left: -8px;
+        -webkit-animation: changePosition 1.04s ease-in infinite alternate;
+      }
+      @-webkit-keyframes changeBgColor {
+        0% {
+          background: lightgreen;
+        }
+        100% {
+          background: lightblue;
+        }
+      }
+
+      @-webkit-keyframes changePosition {
+        0% {
+          background: lightgreen;
+        }
+        100% {
+          margin-left: 142px;
+          background: lightblue;
+        }
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
     <div>
       <div id="startButton">开始</div>
+      <!-- <div id="startButtonSync">开始</div> -->
 
       <div id="log"></div>
+
+      <!-- <div class="loading">
+        <span></span>
+      </div> -->
     </div>
   </body>
   <script>
+    const sleep = (delay) => {
+      for (let start = Date.now(); Date.now() - start <= delay; ) {}
+    };
+
     let logFragment = null;
     function log(text) {
       if (!logFragment) {
@@ -40,6 +90,7 @@
         log("task1");
       },
       () => {
+        // sleep(50);
         log("task2");
       },
       () => {
@@ -69,10 +120,7 @@
 
     function runTaskQueue(deadline) {
       console.log(`deadline: ${deadline.timeRemaining()}`);
-      while (
-        (deadline.timeRemaining() > 0 || deadline.didTimeout) &&
-        taskList.length
-      ) {
+      while ((deadline.timeRemaining() > 0 || deadline.didTimeout) && taskList.length) {
         let task = taskList.shift();
         task();
 
@@ -103,103 +151,18 @@
       statusRefreshScheduled = false;
     }
 
-    document
-      .getElementById("startButton")
-      .addEventListener("click", addTask, false);
+    document.getElementById("startButton").addEventListener("click", addTask, false);
   </script>
-
   <!-- <script>
-    let taskHandle = null;
-    let statusRefreshScheduled = false;
-
-    let taskList = [
-      () => {
-        log("task1");
-      },
-      () => {
-        log("task2");
-      },
-      () => {
-        log("task3");
-      },
-    ];
-
-    function getRandomIntInclusive(min, max) {
-      min = Math.ceil(min);
-      max = Math.floor(max);
-      return Math.floor(Math.random() * (max - min + 1)) + min; //含最大值，含最小值
-    }
-
-    let logFragment = null;
-    function log(text) {
-      if (!logFragment) {
-        logFragment = document.createDocumentFragment();
-      }
-
-      let el = document.createElement("div");
-      el.innerHTML = text;
-      logFragment.appendChild(el);
-    }
-
-    function addTask() {
-      let n = getRandomIntInclusive(1, 3);
+    function addTaskSync() {
+      // 注意这里我们将任务量提升到了至少 50000 个
+      let n = getRandomIntInclusive(50000, 100000);
       for (var i = 0; i < n; i++) {
-        enqueueTask(
-          ((i, n) => {
-            return () => log(`task num ${i + 1} of list ${n}`);
-          })(i, n)
-        );
+        log(`task num ${i + 1} of list ${n}`);
       }
+      scheduleStatusRefresh();
     }
 
-    function enqueueTask(fn) {
-      taskList.push(fn);
-
-      // taskHandle 表示对当前处理中任务的一个引用
-      if (!taskHandle) {
-        taskHandle = requestIdleCallback(runTaskQueue, { timeout: 1000 });
-      }
-    }
-
-    function runTaskQueue(deadline) {
-      console.log(`deadline: ${deadline.timeRemaining()}`);
-
-      while (
-        (deadline.timeRemaining() > 0 || deadline.didTimeout) &&
-        taskList.length
-      ) {
-        let task = taskList.shift();
-        task();
-
-        scheduleStatusRefresh();
-      }
-
-      if (taskList.length) {
-        taskHandle = requestIdleCallback(runTaskQueue, { timeout: 1000 });
-      } else {
-        taskHandle = 0;
-      }
-    }
-
-    function scheduleStatusRefresh() {
-      if (!statusRefreshScheduled) {
-        requestAnimationFrame(updateDisplay);
-        statusRefreshScheduled = true;
-      }
-    }
-
-    let logElem = document.getElementById("log");
-    function updateDisplay(item) {
-      if (logFragment) {
-        logElem.appendChild(logFragment);
-        logFragment = null;
-      }
-
-      statusRefreshScheduled = false;
-    }
-
-    document
-      .getElementById("startButton")
-      .addEventListener("click", addTask, false);
+    document.getElementById("startButtonSync").addEventListener("click", addTaskSync, false);
   </script> -->
 </html>
