redux_tookit 3. 正常用法

--- a/react核心及周边/my_redux_toolkit/public/index.html
+++ b/react核心及周边/my_redux_toolkit/public/index.html
@@ -5,6 +5,10 @@
     <title>redux toolkit</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div>
+      <p id="value">0</p>
+      <button id="add">+</button>
+      <button id="minus">-</button>
+    </div>
   </body>
 </html>
