redux_tookit  基本使用

--- a/react核心及周边/my_redux_toolkit/public/index.html
+++ b/react核心及周边/my_redux_toolkit/public/index.html
@@ -5,10 +5,11 @@
     <title>redux toolkit</title>
   </head>
   <body>
-    <div>
+    <!-- <div>
       <p id="value">0</p>
       <button id="add">+</button>
       <button id="minus">-</button>
-    </div>
+    </div> -->
+    <div id="root"></div>
   </body>
 </html>
